--- a/analysis/03_missingness.Rmd
+++ b/analysis/03_missingness.Rmd
@@ -31,220 +31,136 @@ df_wide |> miss_case_summary() # Missingness per case
 aggr(df_wide, numbers = TRUE, prop = FALSE) # missing pattern
 
 
+
+missing_1 <- vis_miss(df_wide,
+         sort_miss = TRUE)
+
+
+
+ggsave("figures/missingness/missingness_plot.png", 
+       missing_1, width = 7, height = 5, dpi = 300)
+
+missing_2 <- gg_miss_var(df_wide)
+
+ggsave("figures/missingness/missingness_plot2.png", 
+       missing_2, width = 7, height = 5, dpi = 300)
+
+
+
+df_nab <- df_wide |>  
+  bind_shadow()
+
+
+missing_3 <- df_nab |> 
+  ggplot(aes(x = nom_like_NA, y = SUS_1)) +
+  geom_boxplot()
+
+
+ggsave("figures/missingness/missingness_plot3.png", 
+       missing_3, width = 7, height = 5, dpi = 300)
 ```
 
+# 2. Missing Data Mechanism
 
-## 2. Create missingness indicators and recode variables
+
+MAR: missingness associated with observed variables (but not the missing 
+variable itself)
+MCAR: missingness not associated with any variables (observed or unobserved)
+MNAR: missingness associated with the unobserved (missing) values themselves
+
+Here we make some boxplots with a few variables:
 
 
 ```{r}
 
-f_missing <- df_wide |> 
-  mutate(
-    # Missingness indicators 
-    missing_nom_like = factor(if_else(is.na(nom_like), 1, 0)),
-    missing_SUS = factor(if_else(
-      rowSums(across(starts_with("SUS_"), is.na)) > 0, 1, 0
-    )),
-    missing_X2 = factor(if_else(
-      rowSums(across(starts_with("X2_"), is.na)) > 0, 1, 0
-    )),
-    
-    # Total missing per person
-    num_missing = rowSums(across(everything(), is.na)),
-    
-    # recode X1 variables: 1 → 0 (high effort), 2 → 1 (low effort)
-    across(starts_with("X1_"), ~ factor(case_when(
-      .x == 1 ~ 0L,
-      .x == 2 ~ 1L,
-      TRUE ~ NA_integer_
-    ), levels = c(0, 1))),
-    
-    # Convert demographics to factors
-    school = factor(school),
-    class = factor(class),
-    group = factor(group),
-    
-    # SUS numeric
-    across(starts_with("SUS_"), as.numeric)
-  )
 
-# Get X1 variable names
-vars_X1 <- grep("^X1_", names(df_missing), value = TRUE)
+vis_miss(df_wide, sort_miss = TRUE)
 
-```
 
-Does missingness depend on observed variables? If so, this would indicate Missing at Random (MAR).
+gg_miss_var(df_wide)
+
+
+df_nab |> 
+  ggplot(aes(x = nom_like_NA, y = SUS_1)) +
+  geom_boxplot()
+
+
+# --- nom_like --- #
+
+df_nab |> 
+  ggplot(aes(x = nom_like_NA,
+             y = class)) +
+  geom_boxplot()
 
 
 
-## 2.1. Missingness in nom_like
-
-```{r}
-
-# Check expected counts before chi-square and use fisher if expected counts are < 5
-
-# School
-cat("\n--- School ---\n")
-expected_nom_school <- chisq.test(table(df_missing$missing_nom_like, df_missing$school))$expected
-print(expected_nom_school)
-if (any(expected_nom_school < 5)) {
-  fisher.test(table(df_missing$missing_nom_like, df_missing$school))
-} else {
-  chisq.test(table(df_missing$missing_nom_like, df_missing$school))
-}
-
-# Class
-cat("\n--- Class ---\n")
-expected_nom_class <- chisq.test(table(df_missing$missing_nom_like, df_missing$class))$expected
-print(expected_nom_class)
-if (any(expected_nom_class < 5)) {
-  fisher.test(table(df_missing$missing_nom_like, df_missing$class))
-} else {
-  chisq.test(table(df_missing$missing_nom_like, df_missing$class))
-}
-
-# Group
-cat("\n--- Group ---\n")
-expected_nom_group <- chisq.test(table(df_missing$missing_nom_like, df_missing$group))$expected
-print(expected_nom_group)
-if (any(expected_nom_group < 5)) {
-  fisher.test(table(df_missing$missing_nom_like, df_missing$group))
-} else {
-  chisq.test(table(df_missing$missing_nom_like, df_missing$group))
-}
-
-# X1 variables → nom_like missingness
-cat("\n--- X1 Variables ---\n")
-for (var in vars_X1) {
-  tbl <- table(df_missing[[var]], df_missing$missing_nom_like)
-  cat("\n", var, "\n")
-  
-  expected <- chisq.test(tbl)$expected
-  if (any(expected < 5)) {
-    print(fisher.test(tbl))
-  } else {
-    print(chisq.test(tbl))
-  }
-}
-
-```
-
-## 2.2. Missingness in SUS
-
-```{r}
-
-# Group
-cat("\n--- Group ---\n")
-expected_group <- chisq.test(table(df_missing$missing_SUS, df_missing$group))$expected
-print(expected_group)
-if (any(expected_group < 5)) {
-  fisher.test(table(df_missing$missing_SUS, df_missing$group))
-} else {
-  chisq.test(table(df_missing$missing_SUS, df_missing$group))
-}
-
-# School
-cat("\n--- School ---\n")
-expected_school <- chisq.test(table(df_missing$missing_SUS, df_missing$school))$expected
-print(expected_school)
-if (any(expected_school < 5)) {
-  fisher.test(table(df_missing$missing_SUS, df_missing$school))
-} else {
-  chisq.test(table(df_missing$missing_SUS, df_missing$school))
-}
-
-# Class
-cat("\n--- Class ---\n")
-expected_class <- chisq.test(table(df_missing$missing_SUS, df_missing$class))$expected
-print(expected_class)
-fisher.test(table(df_missing$missing_SUS, df_missing$class))
-
-# X1 variables 
-cat("\n--- X1 Variables ---\n")
-for (var in vars_X1) {
-  tbl <- table(df_missing[[var]], df_missing$missing_SUS)
-  cat("\n", var, "\n")
-  
-  if (any(chisq.test(tbl)$expected < 5)) {
-    print(fisher.test(tbl))
-  } else {
-    print(chisq.test(tbl))
-  }
-}
-
-```
+df_nab |> 
+  ggplot(aes(x = nom_like_NA,
+             y = group)) +
+  geom_boxplot()
 
 
-## 2.3. Missingness in X2 variables
+df_nab |> 
+  ggplot(aes(x = nom_like_NA,
+             y = school)) +
+  geom_boxplot()
 
 
-```{r}
-
-# Group
-cat("\n--- Group ---\n")
-expected_x2_group <- chisq.test(table(df_missing$missing_X2, df_missing$group))$expected
-print(expected_x2_group)
-fisher.test(table(df_missing$missing_X2, df_missing$group))
-
-# School
-cat("\n--- School ---\n")
-expected_x2_school <- chisq.test(table(df_missing$missing_X2, df_missing$school))$expected
-print(expected_x2_school)
-fisher.test(table(df_missing$missing_X2, df_missing$school))
-
-# Class
-cat("\n--- Class ---\n")
-expected_x2_class <- chisq.test(table(df_missing$missing_X2, df_missing$class))$expected
-print(expected_x2_class)
-fisher.test(table(df_missing$missing_X2, df_missing$class))
-
-# X1 variables → X2 missingness
-cat("\n--- X1 Variables ---\n")
-for (var in vars_X1) {
-  tbl <- table(df_missing[[var]], df_missing$missing_X2)
-  cat("\n", var, "\n")
-  
-  if (any(chisq.test(tbl)$expected < 5)) {
-    print(fisher.test(tbl))
-  } else {
-    print(chisq.test(tbl))
-  }
-}
-
-```
+plot_sus_na <- df_nab |> 
+  ggplot(aes(x = nom_like_NA,
+             y = SUS_1)) +
+  geom_boxplot()
 
 
-## 3. Do people who are missing nom_like, SUS, and X2 also tend to have more missing values overall?
+ggsave("figures/missingness/missingness_plot4.png", 
+       plot_sus_na, width = 7, height = 5, dpi = 300)
 
 
-```{r}
+# --- SUS scores --- #
 
-# A. Missing nom_like
-cat("\n--- nom_like ---\n")
-t.test(num_missing ~ missing_nom_like, data = df_missing)
 
-# B. Missing SUS
-cat("\n--- SUS ---\n")
-t.test(num_missing ~ missing_SUS, data = df_missing)
+df_nab |> 
+  ggplot(aes(x = SUS_1_NA,
+             y = class)) +
+  geom_boxplot()
 
-# C. Missing X2
-cat("\n--- X2 ---\n")
-t.test(num_missing ~ missing_X2, data = df_missing)
 
-```
 
-Summary
+df_nab |> 
+  ggplot(aes(x = SUS_1_NA,
+             y = group)) +
+  geom_boxplot()
 
-```{r}
 
-cat("Overall missingness:", round(prop_miss(df_wide) * 100, 2), "%\n")
-cat("nom_like missing:", sum(df_missing$missing_nom_like == 1), 
-    "participants (", round(mean(df_missing$missing_nom_like == 1) * 100, 2), "%)\n")
-cat("SUS missing:", sum(df_missing$missing_SUS == 1), 
-    "participants (", round(mean(df_missing$missing_SUS == 1) * 100, 2), "%)\n")
-cat("X2 missing:", sum(df_missing$missing_X2 == 1), 
-    "participants (", round(mean(df_missing$missing_X2 == 1) * 100, 2), "%)\n")
+df_nab |> 
+  ggplot(aes(x = SUS_1_NA,
+             y = school)) +
+  geom_boxplot()
+
+
+# --- X2 --- #
+
+
+df_nab |> 
+  ggplot(aes(x = X2_CLIMATE_2hard90_NA,
+             y = class)) +
+  geom_boxplot()
+
+
+
+df_nab |> 
+  ggplot(aes(x = X2_CLIMATE_2hard90_NA,
+             y = group)) +
+  geom_boxplot()
+
+
+df_nab |> 
+  ggplot(aes(x = X2_CLIMATE_2hard90_NA,
+             y = school)) +
+  geom_boxplot()
+
+
+
 
 ```
 
