--- a/analysis/00_moderators.Rmd
+++ b/analysis/00_moderators.Rmd
@@ -127,7 +127,7 @@ We see that 2 factors are also plausible, but second factor does not fit SUS 2,4
 # 1-factor model
 
 cfa_1f <- "
-  GeneralFactor =~ SUS_1 + SUS_2 + SUS_3 + SUS_4 + SUS_5 + SUS_6 + SUS_7 + SUS_8
+  SocialSusceptibility =~ SUS_1 + SUS_2 + SUS_3 + SUS_4 + SUS_5 + SUS_6 + SUS_7 + SUS_8
 "
 
 # 2-factor model
@@ -170,38 +170,68 @@ fit_table(fit2)
 interpret(fit1)
 interpret(fit2)
 
+# Removing item 2
 
 
-```
-
-CFA indicates that 2-factor model is significantly better (chi-sq difference test), however the the latent variables are highly correlated (std.lv), therefore it might not make sense to use two
-
-## CFA after removing SUS_2 
-
-
-
-```{r}
-
-sus_minus2  <- sus_scores[, -2]
-
-
-model_minus2 <- '
-  F =~ SUS_1 + SUS_3 + SUS_4 + SUS_5 + SUS_6 + SUS_7 + SUS_8
+cfa_minus2 <- '
+  SocialSusceptibility =~ SUS_1 + SUS_3 + SUS_4 + SUS_5 + SUS_6 + SUS_7 + SUS_8
 '
 
 fit_minus2 <- cfa(
-  model_minus2,
-  data    = sus_minus2,
+  cfa_minus2,
+  data    = sus_scores,
   std.lv  = TRUE,
   missing = "fiml"
 )
 
 interpret(fit_minus2)
 
-anova(fit_minus2, fit1)
+summary(fit_minus2, fit.measures = TRUE, standardized = TRUE)
 
 ```
 
+CFA indicates that 2-factor model is significantly better (chi-sq difference test), however the the latent variables are highly correlated (std.lv), therefore it might not make sense to use two
+
+## Visualizing CFA models
+
+```{r}
+
+
+# Visualize the measurement model
+png("figures/sem-plots/semplot_onefactor.png", width = 7, height = 5, res = 300,
+    units = "in")
+
+semPaths(fit1,         # name of fitted model object 
+         what="std",      # display standardized parameter estimates
+         weighted=FALSE,  # do not weight plot features
+         nCharNodes=0)    # do not abbreviate names
+
+dev.off()
+
+# Visualize the measurement model
+png("figures/sem-plots/semplot_twofactor.png", width = 7, height = 5, res = 300,
+    units = "in")
+
+semPaths(fit2,         
+         what="std",      
+         weighted=FALSE,  
+         nCharNodes=0)    
+
+
+dev.off()
+
+# Visualize the measurement model
+png("figures/sem-plots/semplot_minus2.png", width = 7, height = 5, res = 300,
+    units = "in")
+
+semPaths(fit_minus2,       
+         what="std",     
+         weighted=FALSE, 
+         nCharNodes=0)    
+
+dev.off()
+
+```
 
 
 
